<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.sanjetco.hboxemulator.MainActivity"
    tools:showIn="@layout/activity_main">

    <Switch
        android:text="@string/title_image_transmission_start_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/switch_send_image_start_stop"
        android:textSize="20sp"/>
    <TextView
        android:text="@string/title_image_transmission_status_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_image_transmission_status"
        android:layout_alignBaseline="@+id/switch_send_image_start_stop"
        android:layout_alignBottom="@+id/switch_send_image_start_stop"
        android:layout_toEndOf="@+id/switch_send_image_start_stop"
        android:textSize="20sp"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/blank_space_text_one"
        android:visibility="invisible"
        android:layout_below="@id/switch_send_image_start_stop"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/blank_space_text_two"
        android:visibility="invisible"
        android:layout_below="@id/blank_space_text_one"/>
    <TextView
        android:text="@string/title_delay_interval"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title_delay_interval"
        android:layout_below="@id/blank_space_text_two"
        android:textSize="20sp"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/blank_space_text_three"
        android:visibility="invisible"
        android:layout_below="@id/title_delay_interval"/>
    <SeekBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/seekbar_delay_interval"
        android:max="2"
        android:thumbTint="@color/colorAccent"
        android:layout_below="@id/blank_space_text_three"/>
    <TextView
        android:text="@string/seekbar_defaut_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_seekbar_value"
        android:layout_below="@id/seekbar_delay_interval"
        android:textSize="20sp"/>
    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/blank_space_text_four"
        android:visibility="invisible"
        android:layout_below="@id/text_seekbar_value"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_cmd_socket_status"
        android:layout_below="@id/blank_space_text_four"
        android:text="@string/text_cmd_socket_status_closed"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_img_socket_status"
        android:layout_below="@id/text_cmd_socket_status"
        android:text="@string/text_img_socket_status_closed"/>
</RelativeLayout>
